--- a/linker/View/PostView.xib
+++ b/linker/View/PostView.xib
@@ -4,68 +4,84 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostViewController" customModule="linker" customModuleProvider="target">
+            <connections>
+                <outlet property="accessoryView" destination="pn3-hC-r4b" id="zpI-LQ-7LN"/>
+                <outlet property="closeButton" destination="joE-ft-ZsQ" id="ldX-Kr-whX"/>
+                <outlet property="countButton" destination="fwy-1w-0eL" id="Q9J-De-Rnz"/>
+                <outlet property="nameLabel" destination="zL5-7a-9h8" id="i9I-cH-ODm"/>
+                <outlet property="postButton" destination="3Dl-6E-75R" id="Vwx-dz-CMR"/>
+                <outlet property="textView" destination="0Tw-uW-BxC" id="rdb-SB-JZJ"/>
+                <outlet property="view" destination="XL3-F3-IbR" id="fOg-zQ-LHq"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view tag="999" contentMode="scaleToFill" restorationIdentifier="PostView" id="jcq-nD-bgo" customClass="PostView" customModule="linker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+        <view contentMode="scaleToFill" id="XL3-F3-IbR">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSo-8z-ro7">
-                    <rect key="frame" x="540" y="0.0" width="60" height="55"/>
-                    <color key="backgroundColor" red="0.82745098039999998" green="0.99215686270000003" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5R-8k-bPA">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anonymous" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zL5-7a-9h8">
+                            <rect key="frame" x="67" y="25" width="525" height="31"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="60" id="dTl-Uh-aHb"/>
-                        <constraint firstAttribute="height" constant="55" id="iZx-bk-FH4"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                    <color key="tintColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="post"/>
-                    <connections>
-                        <action selector="post" destination="jcq-nD-bgo" eventType="touchUpInside" id="wwD-Z3-rXo"/>
-                    </connections>
-                </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YfU-7b-0iB">
-                    <rect key="frame" x="0.0" y="43" width="540" height="2"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="2" id="qrr-5x-zT2"/>
+                        <constraint firstAttribute="trailing" secondItem="zL5-7a-9h8" secondAttribute="trailing" constant="8" id="9Zh-uP-FSZ"/>
+                        <constraint firstAttribute="height" constant="70" id="MuK-ey-psu"/>
+                        <constraint firstItem="zL5-7a-9h8" firstAttribute="top" secondItem="w5R-8k-bPA" secondAttribute="top" constant="25" id="TlS-hR-5mG"/>
+                        <constraint firstItem="zL5-7a-9h8" firstAttribute="leading" secondItem="w5R-8k-bPA" secondAttribute="leading" constant="67" id="Ydg-Ei-VM9"/>
+                        <constraint firstAttribute="bottom" secondItem="zL5-7a-9h8" secondAttribute="bottom" constant="14" id="dy8-LH-q9F"/>
                     </constraints>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mCm-1f-kNX">
-                    <rect key="frame" x="60" y="8" width="472" height="32"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0Tw-uW-BxC">
+                    <rect key="frame" x="0.0" y="70" width="600" height="170"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="32" id="J99-mX-uTp"/>
+                        <constraint firstAttribute="height" constant="170" id="gOI-bX-P4v"/>
                     </constraints>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <connections>
-                        <outlet property="delegate" destination="jcq-nD-bgo" id="0fc-Wj-To7"/>
+                        <outlet property="delegate" destination="-1" id="8is-0b-ecT"/>
                     </connections>
                 </textView>
             </subviews>
-            <color key="backgroundColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.70478723404255328" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="pSo-8z-ro7" secondAttribute="bottom" id="4HF-Sk-qb6"/>
-                <constraint firstItem="pSo-8z-ro7" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jcq-nD-bgo" secondAttribute="top" id="76a-aC-H1i"/>
-                <constraint firstItem="mCm-1f-kNX" firstAttribute="leading" secondItem="jcq-nD-bgo" secondAttribute="leading" constant="60" id="Vf9-r5-a4n"/>
-                <constraint firstItem="pSo-8z-ro7" firstAttribute="leading" secondItem="mCm-1f-kNX" secondAttribute="trailing" constant="8" id="YSl-6i-w3d"/>
-                <constraint firstItem="mCm-1f-kNX" firstAttribute="top" secondItem="jcq-nD-bgo" secondAttribute="top" constant="8" id="bLK-Ww-lNM"/>
-                <constraint firstItem="YfU-7b-0iB" firstAttribute="leading" secondItem="jcq-nD-bgo" secondAttribute="leading" id="cEf-IP-OyZ"/>
-                <constraint firstAttribute="bottom" secondItem="YfU-7b-0iB" secondAttribute="bottom" constant="10" id="iJy-yI-wTi"/>
-                <constraint firstItem="YfU-7b-0iB" firstAttribute="top" secondItem="mCm-1f-kNX" secondAttribute="bottom" constant="3" id="jeW-YZ-Luv"/>
-                <constraint firstAttribute="trailing" secondItem="pSo-8z-ro7" secondAttribute="trailing" id="jxJ-Wd-Dux"/>
-                <constraint firstItem="pSo-8z-ro7" firstAttribute="leading" secondItem="YfU-7b-0iB" secondAttribute="trailing" id="pWi-p5-0xn"/>
+                <constraint firstAttribute="trailing" secondItem="w5R-8k-bPA" secondAttribute="trailing" id="78j-Vl-vEz"/>
+                <constraint firstItem="w5R-8k-bPA" firstAttribute="leading" secondItem="XL3-F3-IbR" secondAttribute="leading" id="SDR-zv-MCe"/>
+                <constraint firstItem="w5R-8k-bPA" firstAttribute="top" secondItem="XL3-F3-IbR" secondAttribute="top" id="ZAh-eC-AUD"/>
+                <constraint firstAttribute="trailing" secondItem="0Tw-uW-BxC" secondAttribute="trailing" id="cqg-IG-1ip"/>
+                <constraint firstItem="0Tw-uW-BxC" firstAttribute="top" secondItem="w5R-8k-bPA" secondAttribute="bottom" id="p7t-LV-IOm"/>
+                <constraint firstItem="0Tw-uW-BxC" firstAttribute="leading" secondItem="XL3-F3-IbR" secondAttribute="leading" id="ro4-32-1lA"/>
             </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <nil key="simulatedTopBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="postButton" destination="pSo-8z-ro7" id="hic-zC-iRd"/>
-                <outlet property="textView" destination="mCm-1f-kNX" id="wgS-EX-lfq"/>
-                <outlet property="textViewHeight" destination="J99-mX-uTp" id="GeI-bG-BKY"/>
-            </connections>
-            <point key="canvasLocation" x="324" y="172.5"/>
+            <point key="canvasLocation" x="275" y="303"/>
         </view>
+        <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="pn3-hC-r4b">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+            <color key="backgroundColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+            <items>
+                <barButtonItem title="close" width="28" id="joE-ft-ZsQ"/>
+                <barButtonItem style="plain" systemItem="flexibleSpace" id="bSq-xF-Jjc"/>
+                <barButtonItem title="pic" id="WTg-r4-0pc"/>
+                <barButtonItem style="plain" systemItem="flexibleSpace" id="Trh-J3-oko"/>
+                <barButtonItem title="music" id="imu-se-ojz"/>
+                <barButtonItem style="plain" systemItem="flexibleSpace" id="4Qj-DA-atS"/>
+                <barButtonItem title="30" id="fwy-1w-0eL"/>
+                <barButtonItem style="plain" systemItem="flexibleSpace" id="wK8-yj-M7v"/>
+                <barButtonItem title="post" id="3Dl-6E-75R"/>
+            </items>
+            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="barTintColor" red="0.58823529409999997" green="0.90980392160000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+            <point key="canvasLocation" x="275" y="719"/>
+        </toolbar>
     </objects>
 </document>
